# Raphael_legal

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
PRPs/prps/: legal-case-processor-frontend-prp.md  legal-case-processor-mvp-prp.md  legal-case-processor-mvp-v2-prp-analysis.md  legal-case-processor-mvp-v2-prp.md
api/: __init__.py  auth.py  database.py  db_models.py  main.py  schemas.py  seed.py
api/routes/: auth_routes.py  cases_routes.py  documents_routes.py  settings_routes.py  templates_routes.py  users_routes.py
api/services/: case_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
insumos/: WhatsApp Audio 2026-03-04 at 14.22.43 (1).opus  WhatsApp Audio 2026-03-04 at 14.22.43 (1).txt  projeto-raphael-planejamento.md  prompt-legal-case-processor-analysis.md  prompt-legal-case-processor.md  transcricao-audio-2026-03-04.md
raphael_legal/: __init__.py  __main__.py  cli.py  config.py  document_generator.py  models.py  processor.py  prompts.py
scripts/: start_api.sh  start_frontend.sh
templates/: contrato_honorarios.docx  create_templates.py  procuracao_ad_judicia.docx
tests/: test_cli.py  test_document_generator.py  test_integration.py  test_models.py  test_panorama_debug.py  test_processor.py  test_processor_fix.py
tests/fixtures/: briefing_consumidor.txt  briefing_empresarial.txt  briefing_marcas.txt  briefing_minimal.txt  claude_response_marcas.json
(+29 files in other folders)
